Fixed scrollbars in admin panel Changed colors in right panel for reading clarity

--- a/site/public/css/custom.css
+++ b/site/public/css/custom.css
@@ -81,11 +81,13 @@
 }
 
 .userData {
-	height: 100%;
+	height: calc(100vh - 90px);
 	margin-top: -2% !important;
 	-webkit-box-shadow: -4px 6px 22px -8px rgba(189, 189, 189, 1);
 	-moz-box-shadow: -4px 6px 22px -8px rgba(189, 189, 189, 1);
 	box-shadow: -4px 6px 22px -8px rgba(189, 189, 189, 1);
+	background: #e8e6e7;
+	overflow-y: scroll;
 }
 
 .pageTitle {
@@ -136,7 +138,7 @@
 }
 
 .data {
-	color: #c7c7c9;
+	color: black;
 }
 
 .data > span {
@@ -152,7 +154,7 @@
 
 .content{
 	overflow: scroll;
-	height: auto;
+	height: calc(100vh - 90px);
 }
 
 .orderedTableHeaderArrowDown{
